# real-estate-data-platform

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/real_estate_data_platform/config/: __init__.py  settings.py
src/real_estate_data_platform/connectors/: __init__.py  minio.py  postgres.py
src/real_estate_data_platform/dbt/: .user.yml  dbt_project.yml  profiles.yml
src/real_estate_data_platform/dbt/models/: sources.yml
src/real_estate_data_platform/dbt/models/gold/: dim_neighbourhood.sql  fact_rentals_listings.sql  fct_rental_listings.sql  schema.yml
src/real_estate_data_platform/dbt/snapshots/: _snap_fact_rentals_listings.sql  _snap_fct_rental_listings.sql
src/real_estate_data_platform/deployments/: __init__.py  serve.py
src/real_estate_data_platform/flows/: __init__.py  bronze_to_silver_flow.py  scrape_listings_flow.py  scrape_to_bronze_flow.py  silver_to_gold_flow.py
src/real_estate_data_platform/models/: __init__.py  enums.py  listings.py  responses.py  silver_schema.py
src/real_estate_data_platform/orchestration/flows/: example_flow.py
src/real_estate_data_platform/scrapers/: __init__.py  base_scraper.py  kijiji_scraper.py  scraper_type.py
src/real_estate_data_platform/tasks/: __init__.py  load_bronze.py  load_silver.py  read_bronze.py  run_dbt.py  scraping.py  storage.py  transform_silver.py
src/real_estate_data_platform/utils/: __init__.py  dates.py  hashing.py  parsers.py
tests/connectors/: test_postgres.py
tests/flows/: test_silver_to_gold_flow.py
tests/models/: test_silver_schema.py
tests/scrapers/: conftest.py  test_base_scraper.py  test_kijiji_scraper.py
tests/scrapers/fixtures/: kijiji_listing_detail.html  kijiji_listing_no_neighbourhood.html  kijiji_listing_no_next_data.html  kijiji_search_empty.html  kijiji_search_page.html
tests/tasks/: test_run_dbt.py  test_transform_silver.py
tests/utils/: test_dates.py  test_hashing.py  test_parsers.py
