[project]
name = "real_estate_data_platform"
version = "0.1.0"
description = "End-to-end real estate data platform for analytics and BI"
authors = [
    {name = "Sergio Amorrosta",email = "sgotxi500@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "scrapy (>=2.14.1,<3.0.0)",
    "polars (>=1.38.1,<2.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

packages = [
  { include = "real_estate_data_platform", from = "src" }
]