[project]
name = "real_estate_data_platform"
version = "0.1.0"
description = "End-to-end real estate data platform for analytics and BI"
authors = [
    {name = "Sergio Amorrosta",email = "sgotxi500@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "scrapy (>=2.14.1,<3.0.0)",
    "polars (>=1.38.1,<2.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "prefect (>=3.6.16,<4.0.0)"
]

[tool.poetry]
packages = [
  { include = "real_estate_data_platform", from = "src" }
]

[tool.poetry.group.dev.dependencies]
pre-commit = ">=4.5.1,<5.0.0"
ruff = "^0.15.0"

[tool.poetry.group.test.dependencies]
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
 
[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors (settings from FastAPI, thanks, @tiangolo!)
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # flake8-unused-arguments
]
[tool.ruff.lint.isort]
order-by-type = true
relative-imports-order = "closest-to-furthest"
extra-standard-library = ["typing"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = []
